--- a/common/app/views/fragments/items/facia_cards/contentCard.scala.html
+++ b/common/app/views/fragments/items/facia_cards/contentCard.scala.html
@@ -113,7 +113,8 @@ data-test-id="facia-card"
                         @itemImage(
                             fallbackImage.imageMedia,
                             inlineImage = containerIndex == 0 && index < 4,
-                            widthsByBreakpoint = Some(item.mediaWidthsByBreakpoint)
+                            widthsByBreakpoint = Some(item.mediaWidthsByBreakpoint),
+                            shouldLazyLoad = containerIndex > 1,
                         )
                     </div>
                 }
@@ -149,7 +150,8 @@ data-test-id="facia-card"
                     @itemImage(
                         fallbackImage.imageMedia,
                         inlineImage = containerIndex == 0 && index < 4,
-                        widthsByBreakpoint = Some(item.mediaWidthsByBreakpoint)
+                        widthsByBreakpoint = Some(item.mediaWidthsByBreakpoint),
+                        shouldLazyLoad = containerIndex > 1,
                     )
                 </div>
             }
@@ -162,7 +164,8 @@ data-test-id="facia-card"
                     @itemImage(
                         images,
                         inlineImage = containerIndex == 0 && index < 4,
-                        widthsByBreakpoint = Some(item.mediaWidthsByBreakpoint)
+                        widthsByBreakpoint = Some(item.mediaWidthsByBreakpoint),
+                        shouldLazyLoad = containerIndex > 1,
                     )
                 </div>
             }
